# jax_fdm

./: .bumpversion.cfg  .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  conda_linux.yml  conda_osx.yml  conftest.py  doc_versions.txt  env_linux.yml  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tasks.py  versions.json
.github/: CODE_OF_CONDUCT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  docs.yml  pr-checks.yml  release.yml
0.1.2/: api.html  objects.inv  search.html  tutorial.html
0.1.2/_static/: documentation_options.js
0.12.0/: 404.html  index.html  sitemap.xml
0.12.0/citation/: index.html
0.12.0/examples/: index.html
0.12.0/installation/: index.html
0.12.0/license/: index.html
0.12.0/search/: search_index.json
0.13.0/: 404.html  index.html  sitemap.xml
0.13.0/citation/: index.html
0.13.0/examples/: index.html
0.13.0/installation/: index.html
0.13.0/license/: index.html
0.13.0/search/: search_index.json
0.2.0/: index.html  py-modindex.html
0.2.1/: api.html  tutorial.html
0.2.2/: .buildinfo  examples.html  genindex.html  index.html  search.html
0.2.2/.doctrees/: license.doctree
0.2.3/: .buildinfo  genindex.html  index.html  license.html  searchindex.js
0.2.4/: api.html  examples.html  genindex.html  index.html  installation.html  tutorial.html
0.2.4/api/: jax_fdm.html
0.3.0/: api.html  genindex.html  index.html  installation.html  tutorial.html
0.3.0/api/: jax_fdm.html
0.4.0/: license.html
0.4.0/.doctrees/: environment.pickle  examples.doctree
0.4.1/: .buildinfo  api.html  genindex.html  installation.html  search.html
0.4.2/: .buildinfo  api.html  examples.html  genindex.html  installation.html  tutorial.html
0.4.2/.doctrees/: environment.pickle
0.4.2/api/: jax_fdm.html
0.4.3/: .buildinfo  genindex.html  index.html  license.html  py-modindex.html  search.html
0.4.3/_static/: documentation_options.js
0.4.4/: genindex.html  index.html  py-modindex.html  search.html  tutorial.html
0.4.4/.doctrees/: environment.pickle  license.doctree
0.4.4/_static/: documentation_options.js
0.4.5/: api.html  genindex.html  index.html  installation.html  py-modindex.html  search.html
0.4.5/.doctrees/: environment.pickle
0.4.5/_static/: documentation_options.js
0.4.5/api/: jax_fdm.html
0.5.0/: .buildinfo  api.html  examples.html  installation.html  tutorial.html
0.5.0/api/: jax_fdm.html
0.5.1/: .buildinfo  genindex.html  index.html  license.html  py-modindex.html  search.html  tutorial.html
0.5.1/.doctrees/: installation.doctree
0.5.2/: genindex.html  py-modindex.html  search.html
0.5.2/_static/: documentation_options.js
0.6.0/: genindex.html  installation.html  license.html  objects.inv  py-modindex.html  search.html  tutorial.html
0.6.0/.doctrees/: tutorial.doctree
0.6.0/api/: jax_fdm.html
0.7.0/: .buildinfo  api.html  genindex.html  index.html  installation.html  license.html  objects.inv  tutorial.html
0.7.0/.doctrees/: api.doctree  index.doctree
0.7.0/api/: jax_fdm.html
0.7.1/: .buildinfo  search.html
0.7.1/.doctrees/: environment.pickle
0.7.1/_static/: documentation_options.js
data/: PLACEHOLDER
data/json/: arch.json  butt.json  butt_target.json  creased_shell.json  creased_vault.json  creased_vault_mesh_target.json  dome_base.json  dome_eq_g_optimized.json  dome_history.json  monkey_saddle.json  monkey_saddle_base.json  monkey_saddle_history.json  vault.json  vault0.json  vault_mesh.json
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/citation/: index.html
dev/custom_goals/: index.html
dev/examples/: index.html
dev/installation/: index.html
dev/license/: index.html
dev/search/: search_index.json
docs/: api.rst  citation.md  conf.py  custom_goals.md  examples.md  examples.rst  index.md  index.rst  installation.md  installation.rst  mkdocs-migration-plan.md  tutorial.rst
docs/_images/: PLACEHOLDER
docs/_static/: PLACEHOLDER
docs/api/: index.md  jax_fdm.constraints.md  jax_fdm.datastructures.md  jax_fdm.equilibrium.md  jax_fdm.geometry.md  jax_fdm.goals.md  jax_fdm.losses.md  jax_fdm.optimization.md  jax_fdm.parameters.md  jax_fdm.rst  (+4 more)
examples/: arch.py  arches.py  butt.py  dome.py  dome_constraints.py  history.py  monkey_saddle.py  monkey_saddle_constraints.py  pillow.py  pringle.py  prof.py  prof_pringle.py
latest/: .buildinfo  api.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html
notebooks/: arch.ipynb  spiral.ipynb  vault.ipynb
stable/: .buildinfo  api.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  search.html  tutorial.html
studies/: arch.py  arch_viz.py  arches_info.pkl  arches_results.pkl  chain_results.pkl  chain_results_t4.pkl  chain_viz.py  plots.ipynb  saddle.py  saddle_info.pkl  saddle_results_t4.pkl  saddle_results_v100.pkl  saddle_viz.py  speed_study_figures.ipynb  tower.py  tower_info.pkl  tower_results.pkl  tower_results_t4.pkl  tower_results_t4_0.pkl  tower_viz.py
temp/: PLACEHOLDER
tests/: conftest.py  test_adjoint_routing.py  test_angles.py  test_arch_benchmark.py  test_area.py  test_closest.py  test_colinearity.py  test_connectivity.py  test_curvature.py  test_datastructure_types.py  test_evaluate.py  test_goal_angle.py  test_goal_face_rectangle.py  test_goal_residual_plane.py  test_goals_vertex.py  test_gradient_descent.py  test_graph_indices.py  test_lcs.py  test_liew_dome.py  test_loads.py  test_normal.py  test_optimizer.py  test_optimizer_parameters.py  test_planarity.py  test_plotter_scene_objects.py  test_recorder.py  test_reference_solver.py  test_scene_objects.py  test_solver.py  test_sparse_interop.py  test_sparse_parity.py  test_taylor_convergence.py  test_viewer_buffers.py  test_viewer_reuse.py  test_viewer_singleton.py
(+311 files in other folders)
