[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "jax_fdm"
description = "Auto-differentiable and hardware-accelerated force density method"
readme = "README.md"
license = { text = "MIT license" }
authors = [{ name = "Rafael Pastrana", email = "arpastrana@princeton.edu" }]
requires-python = ">=3.10,<3.13"
keywords = [
    "jax",
    "automatic-differentiation",
    "architecture",
    "form-finding",
    "structural-design",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
dependencies = [
    "jax[cpu]",
    "numpy",
    "compas>=2.15,<3.0",
    "matplotlib",
    "scipy",
    "jaxopt",
    "equinox",
    "lineax",
    "optimistix",
]

[project.urls]
Homepage = "https://github.com/arpastrana/jax_fdm"
Repository = "https://github.com/arpastrana/jax_fdm"
Documentation = "https://arpastrana.github.io/jax_fdm/"

[project.optional-dependencies]
# 3D viewer and notebook viewer for the COMPAS 2.x scene system.
# pythreejs comes with compas_notebook; pinned here because the notebook
# scene objects import it directly to build batched render buffers.
viz = ["compas_viewer>=1.0", "compas_notebook>=0.11", "pythreejs"]
# Interior-point optimizer. cyipopt needs a system Ipopt library.
ipopt = ["cyipopt"]
dev = [
    "ruff",
    "pytest >=3.2",
    "bump-my-version",
    "build",
    "twine",
    "invoke >=0.14",
    "pre-commit",
]
# Exact pins: the mkdocs/mkdocstrings/griffe trio breaks across versions.
docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.6",
    "mkdocstrings[python]==1.0.5",
]

[tool.setuptools.dynamic]
version = { attr = "jax_fdm.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 180
target-version = "py310"
# The Colab notebooks carry !pip magics and notebook-style cells.
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["compas", "jax_fdm"]

[tool.ruff.lint.per-file-ignores]
# Re-exports and the jax x64 config run before the submodule imports.
"src/jax_fdm/__init__.py" = ["E402", "F401"]
# jaxtyping string-shape annotations (e.g. Float[Array, "n 3"]) trip pyflakes.
"src/jax_fdm/equilibrium/states.py" = ["F722", "F821"]

[tool.bumpversion]
current_version = "0.11.0"
commit = true
tag = true
message = "Bump version to {new_version}"

[[tool.bumpversion.files]]
filename = "src/jax_fdm/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "Unreleased"
replace = "[{new_version}] {now:%Y-%m-%d}"

[tool.pytest.ini_options]
testpaths = ["tests", "src/jax_fdm"]
norecursedirs = ["migrations"]
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = ["-ra", "--strict-markers", "--doctest-modules", "--tb=short"]
markers = [
    # Deletable scaffolding; run the COMPAS-free suite with -m "not compas_xcheck".
    "compas_xcheck: cross-check a result against COMPAS",
    # Slow tests; skip them with -m "not slow".
    "slow: a slow-running test",
]
