[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "jax_fdm"
description = "Auto-differentiable and hardware-accelerated force density method"
readme = "README.md"
license = { text = "MIT license" }
authors = [{ name = "Rafael Pastrana", email = "arpastrana@princeton.edu" }]
requires-python = ">=3.10,<3.13"
keywords = [
    "jax",
    "automatic-differentiation",
    "architecture",
    "form-finding",
    "structural-design",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
dependencies = [
    "jax[cpu]",
    "numpy",
    "compas>=2.15,<3.0",
    "matplotlib",
    "scipy",
    "jaxopt",
    "equinox",
    "lineax",
    "optimistix",
    "jaxtyping>=0.2.20",
]

[project.urls]
Homepage = "https://github.com/arpastrana/jax_fdm"
Repository = "https://github.com/arpastrana/jax_fdm"
Documentation = "https://arpastrana.github.io/jax_fdm/"

[project.optional-dependencies]
# 3D viewer and notebook viewer for the COMPAS 2.x scene system.
# pythreejs comes with compas_notebook; pinned here because the notebook
# scene objects import it directly to build batched render buffers.
viz = ["compas_viewer>=1.0", "compas_notebook>=0.11", "pythreejs", "compas_plotter>=1.0"]
# Interior-point optimizer. cyipopt needs a system Ipopt library.
ipopt = ["cyipopt"]
dev = [
    "ruff",
    "pytest >=3.2",
    "pytest-xdist",
    "bump-my-version",
    "build",
    "twine",
    "invoke >=0.14",
    "pre-commit",
]
# Exact pin: pyright basic-mode default diagnostics can shift between releases,
# which would fail CI with no code change.
typecheck = ["pyright==1.1.411"]
# Exact pins: the mkdocs/mkdocstrings/griffe trio breaks across versions.
docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.6",
    "mkdocstrings[python]==1.0.5",
    "mkdocstrings-python==2.0.5",
    "mkdocs-redirects==1.2.2",
    "griffelib==2.1.0",
    "mike==2.2.0",
]

[tool.setuptools.dynamic]
version = { attr = "jax_fdm.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
# The Colab notebooks carry !pip magics and notebook-style cells.
extend-exclude = ["notebooks"]

[tool.ruff.format]
# Format code inside docstrings too. On its own, ruff format packs a wrapped
# signature or call onto the fewest lines that fit; COM812 in the linter adds a
# magic trailing comma to every wrapped bracketed construct, which makes the
# formatter explode it one element per line. The two together give the
# one-argument-per-line layout this codebase uses.
docstring-code-format = true

[tool.ruff.lint]
# D202 (no blank line after docstring) and D300 (triple double quotes) enforce the
# multi-line docstring style, alongside ruff format. COM812 (trailing comma
# missing) drives the one-element-per-line formatting described above.
select = ["COM812", "D202", "D300", "E", "F", "I", "W"]
# jaxtyping shape strings (e.g. Float[Array, "nodes 3"]) are not valid forward
# references, tripping pyflakes' F722 everywhere jaxtyping is used. F722 has no
# legitimate hit in this codebase, so it is silenced globally rather than
# per-file. F821 stays scoped per-file (see per-file-ignores) since it is a
# real undefined-name check elsewhere.
ignore = ["F722"]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["compas", "jax_fdm"]

[tool.ruff.lint.per-file-ignores]
# Re-exports and the jax x64 config run before the submodule imports.
"src/jax_fdm/__init__.py" = ["E402", "F401"]
# jaxtyping shape strings reference dimension names (nodes, edges, ...) that
# pyflakes treats as undefined identifiers (F821). Now that jaxtyping shapes are
# used across the whole library and pyright (reportUndefinedVariable) checks
# undefined names package-wide, F821 here is redundant, so it is silenced for the
# entire package rather than enumerated per shape-annotated subpackage.
"src/jax_fdm/**/*.py" = ["F821"]
# Tests use JAX bool comparisons (E712) and long inline arrays (E501).
"tests/*" = ["E712", "E501"]

[tool.bumpversion]
current_version = "0.13.0"
commit = true
tag = true
message = "Bump version to {new_version}"

[[tool.bumpversion.files]]
filename = "src/jax_fdm/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "Unreleased"
replace = "[{new_version}] {now:%Y-%m-%d}"

[tool.pytest.ini_options]
testpaths = ["tests", "src/jax_fdm"]
norecursedirs = ["migrations"]
python_files = ["test_*.py", "*_test.py", "tests.py"]
# -n auto fans the suite across all cores (pytest-xdist); pass -n0 to serialize
# for debugging a single test. --dist loadfile pins each test file to one worker
# so its tests report consecutively, and -v prints the full test id per line
# (bare dots are unreadable once workers interleave). % and [gwN] tag included.
addopts = [
    "-ra",
    "--strict-markers",
    "--doctest-modules",
    "--tb=short",
    "-v",
    "-n",
    "auto",
    "--dist",
    "loadfile",
]
markers = [
    # Deletable scaffolding; run the COMPAS-free suite with -m "not compas_xcheck".
    "compas_xcheck: cross-check a result against COMPAS",
    # Slow tests; skip them with -m "not slow".
    "slow: a slow-running test",
]

[tool.pyright]
include = ["src/jax_fdm"]
# The notebook viz objects import optional viz-extra packages (pythreejs,
# compas_notebook) that the typecheck CI job does not install.
exclude = ["**/__pycache__", "src/jax_fdm/visualization/notebooks"]
# Validate against the minimum supported Python, independent of the CI runner.
pythonVersion = "3.10"
typeCheckingMode = "basic"
# compas, jaxopt and lineax ship no py.typed marker.
reportMissingModuleSource = "none"
reportMissingTypeStubs = "none"
# COMPAS datastructures expose attributes dynamically that pyright cannot see.
reportAttributeAccessIssue = "warning"
